--- a/components/addQuestion/addQuestion.html
+++ b/components/addQuestion/addQuestion.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div ng-controller="AddquestionController">
 
-</body>
-</html>
+<p> Add question </p>
+
+</div>
