--- a/components/addQuestion/dialog.tmpl.html
+++ b/components/addQuestion/dialog.tmpl.html
@@ -1,6 +1,7 @@
 
 
 <md-dialog aria-label="{{questionData.Title}}">
+    <!--adsadhjgasjdgjs-->
     <form>
         <md-toolbar style="width: 650px;">
             <div class="md-toolbar-tools">
